# baseTypeBenchmark

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  benchmark_output.txt  benchmark_p1_output.txt  docker-compose.yml  init.sh  metrics.py  pyproject.toml  requirements.txt  run.py  run_v2_old.py
bench/: README.md  config.py  metrics.py  runner.py
bench/profiles/: memgraph.yaml  oxigraph.yaml  pg_jsonb.yaml  pg_rel.yaml
config/: benchmark.env  equipment_distribution.yaml  simulation.yaml  space_types.yaml
config/equipment/: AHU.yaml  BarrierGate.yaml  CO2_Sensor.yaml  CRAC.yaml  DALI_Gateway.yaml  Dimmer.yaml  EVChargerLevel2.yaml  Emergency_Lighting.yaml  EnergyMeter.yaml  FCU.yaml  FireExtinguisher.yaml  LED_Driver_DALI2.yaml  Lighting_Circuit.yaml  ManualCallPoint.yaml  Occupancy_Sensor.yaml  ParkingGuidanceController.yaml  ParkingSensorMagnetic.yaml  (+6 more)
dataset_gen/: README.md  __init__.py  config.py  export_graph.py  export_pg.py  export_rdf.py  generator.py  model.py  run.py
deploy/: DEPLOY.md  aws_setup.sh  connect-vps.bat  hetzner_setup.sh  ovh_setup.sh  quick-setup.sh  run-benchmark.sh  run_benchmark.sh  setup-vps.sh
docker/: .env  docker-compose.yml
docs/: AUDIT_REFACTORING_SPEC.md  B3_INVESTIGATE_ZERO_ROWS.md  B3_ONDEMAND_EXPORT_TASK.md  B3_RUNBOOK.md  PROGRESS_TRACKER.md  QUERIES_SPECIFICATION.md  REFACTORING_SPEC.md  REFactoring_AUDIT_vs_SPEC_and_STACK.md  SCENARIO_OPTIMIZATION.md  SMOKE_TEST.md  evaluation_criteria.md  methodology.md  metrics.md  queries.md  scope.md  sizing_analysis.md
scripts/: diagnose_env.py  smoke_benchmark.py
(+686 files in other folders)
