[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basetype-benchmark"
version = "0.1.0"
description = "Benchmark comparatif des paradigmes de bases de données pour données bâtimentaires"
authors = [
    {name = "Synaptikad", email = "contact@synaptikad.com"}
]
dependencies = [
    "requests>=2.28.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.3.0",
    "neo4j>=5.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "docker>=6.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
basetype-dataset = "basetype_benchmark.dataset.run:main"
basetype-benchmark = "basetype_benchmark.benchmark.runner:main"
basetype-cli = "basetype_benchmark.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["basetype_benchmark*"]

[tool.setuptools.package-dir]
"" = "src"